5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1764_1583.log
== SUBMITION (2019-05-30 00:33:37) 
-- CODE:
from numpy import*
s = input("")
i = 0
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
			if  i < len(s) -3:
				v += x + "."
			else:
				v += x
		i += 3
print(v)
-- EXECUTION TIME:
0.16669
-- ERROR:
  File "/home/codebench/codes/1764/1583/main.py", line 7
    if  i < len(s) -3:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:33:39) 
-- CODE:
from numpy import*
s = input("")
i = 0
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
			if  i < len(s) -3:
				v += x + "."
			else:
				v += x
		i += 3
print(v)
-- EXECUTION TIME:
0.134246
-- ERROR:
  File "/home/codebench/codes/1764/1583/main.py", line 7
    if  i < len(s) -3:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:33:42) 
-- CODE:
from numpy import*
s = input("")
i = 0
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
			if  i < len(s) -3:
				v += x + "."
			else:
				v += x
		i += 3
print(v)
-- ERROR:
File "XXXX", line 7
    if  i < len(s) -3:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:34:08) 
-- CODE:
from numpy import*
s = input("")
i = 0
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
			if  i < len(s) -3:
				v += x + "."
			else:
				v += x
		i += 3
print(v)
-- ERROR:
File "XXXX", line 7
    if  i < len(s) -3:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:34:27) 
-- CODE:
from numpy import*
s = input("")
i = 0
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		if  i < len(s) -3:
			v += x + "."
		else:
			v += x
		i += 3
print(v)
-- EXECUTION TIME:
0.436142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 10, in <module>
    v += x
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:34:29) 
-- CODE:
from numpy import*
s = input("")
i = 0
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		if  i < len(s) -3:
			v += x + "."
		else:
			v += x
		i += 3
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:34:46) 
-- CODE:
from numpy import*
s = input("")
i = 0
v = 0
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		if  i < len(s) -3:
			v += x + "."
		else:
			v += x
		i += 3
print(v)
-- EXECUTION TIME:
0.422529
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 11, in <module>
    v += x
TypeError: unsupported operand type(s) for +=: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:34:48) 
-- CODE:
from numpy import*
s = input("")
i = 0
v = 0
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		if  i < len(s) -3:
			v += x + "."
		else:
			v += x
		i += 3
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:34:55) 
-- CODE:
from numpy import*
s = input("")
i = 0
v = ""
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		if  i < len(s) -3:
			v += x + "."
		else:
			v += x
		i += 3
print(v)
-- EXECUTION TIME:
0.500987
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:35:09) 
-- CODE:
from numpy import*
s = input("")
i = 0
v = ""
while i < len(s):
	if len(s)%3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		if  i < len(s) -3:
			v += x + "."
		else:
			v += x
		i += 3
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
